Fix Safari blur behind issue on navbar

--- a/ianmtz/ianmtz/wwwroot/css/site.css
+++ b/ianmtz/ianmtz/wwwroot/css/site.css
@@ -92,12 +92,22 @@ body {
     outline-color: rgba(192, 255, 0, 0.7);
 }
 
+.navbar-dark .navbar-toggler {
+    border: 1px solid rgba(98, 98, 98, 0.9);
+}
+
+.navbarContainer {
+    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.3);
+    border-radius: 0.25rem;
+    border: 1px solid rgba(98, 98, 98, 0.9);
+}
+
 .bg-dark {
     background-color: rgba(23, 23, 23, 0.85) !important;
-    border: 1px solid rgba(255, 255, 255, 0.25);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.3);
+    box-shadow: none;
+    border: 0px solid transparent;
 }
 
 .windowOuter {
